--- a/Scoop.Web/Views/Dashboard/_PerformanceTask.cshtml
+++ b/Scoop.Web/Views/Dashboard/_PerformanceTask.cshtml
@@ -1,12 +1,25 @@
 ﻿<div class="performance-task-template template">
     <div class="col-lg-6 chart-container">
         <div class="clearfix">
-            <h5 class="chart-title">Performance <span class="name"></span> <small class="uri"></small></h5>
-            <ul class="chart-legend">
-                <li class="performance-legend-cpu"><span class="legend-item-bullet"></span><span class="legend-item-text">CPU</span></li>
-                <li class="performance-legend-mem"><span class="legend-item-bullet"></span><span class="legend-item-text">Mem</span></li>
-                <li class="performance-legend-disk"><span class="legend-item-bullet"></span><span class="legend-item-text">Disk</span></li>
-            </ul>
+            <div class="chart-title row">
+                <div class="col-xs-4">
+                    <span class="ellipsis">
+                        <small class="">Performance</small>
+                        <i class="fa fa-fw fa-caret-right"></i>
+                        <span class="name text-info" data-bind="text: name"></span>
+                    </span>
+                </div>
+                <div class="col-xs-5">
+                    <code data-bind="css: { 'text-primary': !hasConnectionProblem(), 'text-warning': hasConnectionProblem }"><i class="fa fa-fw fa-globe"></i><span data-bind="text: uri"></span></code>
+                </div>
+                <div class="col-xs-3">
+                    <ul class="chart-legend">
+                        <li class="performance-legend-cpu"><span class="legend-item-bullet"></span><span class="legend-item-text">CPU</span></li>
+                        <li class="performance-legend-mem"><span class="legend-item-bullet"></span><span class="legend-item-text">Mem</span></li>
+                        <li class="performance-legend-disk"><span class="legend-item-bullet"></span><span class="legend-item-text">Disk</span></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="chart-target ct-octave"></div>
     </div>
