--- a/Scoop.Service.Installer/Installer.wxs
+++ b/Scoop.Service.Installer/Installer.wxs
@@ -36,7 +36,7 @@
 
   <Fragment>
     <Directory Id="TARGETDIR" Name="SourceDir">
-      <Directory Id="ProgramFilesFolder">
+      <Directory Id="ProgramFiles64Folder">
         <Directory Id="APPLICATIONFOLDER" Name="Scoop Service" />
       </Directory>
     </Directory>
