+ Added inverse color

--- a/Scoop.Web/Content/Site.less
+++ b/Scoop.Web/Content/Site.less
@@ -3,6 +3,9 @@
 @font-size-base: 14px;
 @headings-font-weight: 600;
 
+body.inverse {
+    background-color: #222;
+}
 
 .tab-pane .row {
     margin-left: @grid-gutter-width / 2;
