+ Added connection status messages + Widget will now display instantly regardless of connection status + Squashed some connection bugs

--- a/Scoop.Web/Views/Dashboard/Dashboard.cshtml
+++ b/Scoop.Web/Views/Dashboard/Dashboard.cshtml
@@ -13,7 +13,8 @@
     </button>
 </div>
 
-<div class="row dashboard-container"></div>
+<div class="row dashboard-container-top" id="dashboardContainerTop"></div>
+<div class="row dashboard-container-middle" id="dashboardContainerMiddle"></div>
 
 @{ Html.RenderPartial("_PerformanceTask"); }
 @{ Html.RenderPartial("_ConnectionModal"); }
