--- a/Scoop.Web/Views/Shared/_ConnectionModal.cshtml
+++ b/Scoop.Web/Views/Shared/_ConnectionModal.cshtml
@@ -29,7 +29,7 @@
                                         </code>
                                     </div>
                                     <div data-bind="if: hasConnectionProblem">
-                                        <small><em class="text-warning" data-bind="text: connectionProblemMessage"></em></small>
+                                        <small><em class="text-warning" data-bind="text: connectionMessage"></em></small>
                                     </div>
                                 </div>
                                 <div class="col-xs-1 text-right">
